# qsh

./: .gitignore  Cargo.toml  flake.nix
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
crates/qsh-client/: Cargo.toml  build.rs  libstate.rlib
crates/qsh-client/src/: attach.rs  channel.rs  cli.rs  connection.rs  escape.rs  lib.rs  main.rs  reconnectable.rs  render.rs  session.rs  ssh.rs  standalone.rs  terminal.rs
crates/qsh-client/src/cli/: file.rs  mod.rs  parsing.rs  terminal.rs  tests.rs  types.rs
crates/qsh-client/src/control/: README.md  attachment.rs  client.rs  commands.rs  control.proto  manager.rs  mod.rs  protocol.rs  repl.rs  resource.rs  socket.rs
crates/qsh-client/src/control/resources/: file_transfer.rs  forward.rs  mod.rs  terminal.rs
crates/qsh-client/src/file/: mod.rs  progress.rs  transfer.rs
crates/qsh-client/src/forward/: local.rs  mod.rs  registry.rs  remote.rs  socks.rs  tests.rs
crates/qsh-client/src/overlay/: mod.rs  notification.rs  prediction_display.rs  status_widget.rs
crates/qsh-client/src/overlay/notification/: format.rs  mod.rs  render.rs  state.rs  tests.rs
crates/qsh-client/src/prediction/: cursor.rs  engine.rs  mod.rs  state.rs  tests.rs  types.rs
crates/qsh-client/src/transfer/: engine.rs  mod.rs  progress.rs
crates/qsh-client/tests/: cli_validation.rs  e2e.rs  file_transfer_resource.rs  forward_resource.rs  resource_manager_integration.rs  terminal_resource.rs
crates/qsh-control/: Cargo.toml  build.rs
crates/qsh-control/src/: client.rs  control.proto  lib.rs  protocol.rs  socket.rs  types.rs
crates/qsh-core/: Cargo.toml
crates/qsh-core/src/: connect_mode.rs  constants.rs  error.rs  handshake.rs  lib.rs  logging.rs  metrics.rs  timing.rs
crates/qsh-core/src/auth/: agent.rs  challenge.rs  handshake.rs  keys.rs  known_hosts.rs  mod.rs
crates/qsh-core/src/bootstrap/: mod.rs  response.rs
crates/qsh-core/src/connection/: channel_map.rs  global_request.rs  heartbeat.rs  mod.rs
crates/qsh-core/src/file/: checksum.rs  compress.rs  delta.rs  mod.rs  types.rs
crates/qsh-core/src/forward/: mod.rs  spec.rs  tests.rs
crates/qsh-core/src/protocol/: channel.rs  codec.rs  control.rs  data.rs  lifecycle.rs  message.rs  mod.rs  params.rs  proptest.rs  types.rs
crates/qsh-core/src/session/: config.rs  mod.rs  reconnect.rs  state.rs
crates/qsh-core/src/terminal/: diff.rs  display.rs  mod.rs  parser.rs  state.rs
crates/qsh-core/src/transport/: config.rs  mod.rs  quic.rs  quiche.rs  sender.rs  stream_mapper.rs
crates/qsh-core/src/transport/common/: cert.rs  error.rs  mod.rs  stream_header.rs
crates/qsh-core/src/transport/quiche/: client.rs  config.rs  connection.rs  mod.rs  sender.rs  server.rs  stream.rs
crates/qsh-core/src/transport/s2n/: client.rs  config.rs  connection.rs  mod.rs  sender.rs  server.rs  stats.rs  stream.rs
crates/qsh-core/src/tunnel/: handler.rs  mod.rs  tun_linux.rs  types.rs
crates/qsh-core/tests/: stream_direction_integration.rs
crates/qsh-server/: Cargo.toml
crates/qsh-server/src/: bootstrap.rs  cli.rs  connection.rs  lib.rs  listener.rs  main.rs  pty.rs  registry.rs  session.rs  ssh.rs  standalone.rs
crates/qsh-server/src/channel/: file_transfer.rs  forward.rs  mod.rs  terminal.rs
crates/qsh-server/src/connection/: channels.rs  config.rs  forwards.rs  handler.rs  mod.rs
crates/qsh-server/src/control/: handler.rs  mod.rs
crates/qsh-server/src/file/: handler.rs  mod.rs
crates/qsh-server/src/forward/: handler.rs  mod.rs  remote.rs  tests.rs
crates/qsh-server/tests/: cli_validation.rs
crates/qsh-test-utils/: Cargo.toml
crates/qsh-test-utils/src/: fake_pty.rs  fake_tun.rs  lib.rs  mock_transport.rs  test_keys.rs
docs/: qsh-IMPL-SPEC.md  qsh-PRD.md  qsh-PROTOCOL.md  qsh-TDD-SPEC.md
notes/: llm-one-shot-prompt.txt  orchestrator-meta-prompt.txt  progress-template.md  standalone.md
scripts/: deploy-server.sh  drop-test.sh  netem-profile.sh  netem-profiles.conf  netem-test.sh
tests/: file_transfer_e2e.rs
