[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["qsh contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/anthropics/qsh"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# QUIC/TLS
quinn = "0.11"
rustls = "0.23"

# SSH
russh = "0.45"

# PTY
portable-pty = "0.8"

# Terminal parsing
vte = "0.13"
unicode-width = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Bytes/buffers
bytes = "1.7"

# Crypto
rcgen = "0.13"
rand = "0.8"
base64 = "0.22"

# IP networking
ipnet = { version = "2.9", features = ["serde"] }

# Utilities
uuid = { version = "1.10", features = ["v4"] }
shell-escape = "0.1"

# Internal crates
qsh-core = { path = "crates/qsh-core" }
qsh-client = { path = "crates/qsh-client" }
qsh-server = { path = "crates/qsh-server" }
qsh-test-utils = { path = "crates/qsh-test-utils" }

# Test dependencies
tokio-test = "0.4"
proptest = "1.5"
test-case = "3.3"
assert_matches = "1.5"
