[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["qsh contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/anthropics/qsh"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# QUIC/TLS
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "logging", "tls12"] }

# SSH
russh = "0.45"
russh-keys = "0.45"
async-trait = "0.1"

# PTY (using nix for cross-platform Unix support including Android)
nix = { version = "0.29", features = ["term", "process", "fs", "signal"] }

# Terminal parsing
vte = "0.13"
unicode-width = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Bytes/buffers
bytes = "1.7"

# Crypto
rcgen = "0.13"
rand = "0.8"
base64 = "0.22"
ring = "0.17"

# SSH keys (for standalone auth feature)
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "p256", "std", "encryption", "crypto"] }
rpassword = "7"
ssh-agent-client-rs = "1.1.2"

# IP networking
ipnet = { version = "2.9", features = ["serde"] }

# TUN device
tun = { version = "0.7", features = ["async"] }

# Utilities
uuid = { version = "1.10", features = ["v4"] }
shell-escape = "0.1"
shell-words = "1.1"
libc = "0.2"
filetime = "0.2"

# Internal crates
qsh-core = { path = "crates/qsh-core", default-features = false }
qsh-client = { path = "crates/qsh-client" }
qsh-server = { path = "crates/qsh-server" }
qsh-test-utils = { path = "crates/qsh-test-utils" }

# Test dependencies
tokio-test = "0.4"
proptest = "1.5"
test-case = "3.3"
assert_matches = "1.5"
futures = "0.3"
tempfile = "3"
