[package]
name = "qsh-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "qsh client binary - modern roaming-capable remote terminal"

[lib]
path = "src/lib.rs"

[[bin]]
name = "qsh"
path = "src/main.rs"

[[bin]]
name = "qscp"
path = "src/bin/qscp.rs"

[features]
default = ["s2n-quic-backend", "compression"]
quiche-backend = ["qsh-core/quiche-backend", "dep:tokio-quiche", "dep:quiche"]
s2n-quic-backend = ["qsh-core/s2n-quic-backend", "dep:s2n-quic"]
tunnel = ["qsh-core/tunnel"]
standalone = ["qsh-core/standalone", "dep:ssh-key", "dep:rpassword"]
compression = ["qsh-core/compression"]

[dependencies]
qsh-core = { workspace = true, default-features = false }
qsh-control = { workspace = true }
tokio = { workspace = true }
tokio-quiche = { workspace = true, optional = true }
quiche = { workspace = true, optional = true }
s2n-quic = { workspace = true, optional = true }
russh = { workspace = true }
russh-keys = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shell-escape = { workspace = true }
shell-words = { workspace = true }
libc = { workspace = true }
rand = { workspace = true }
indicatif = "0.18"
futures = "0.3"
prost = "0.13"
prost-types = "0.13"
rustyline = "14.0"

# Standalone mode (optional)
ssh-key = { workspace = true, optional = true }
rpassword = { workspace = true, optional = true }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
test-case = { workspace = true }
assert_matches = { workspace = true }
tempfile = { workspace = true }
qsh-test-utils = { path = "../qsh-test-utils", default-features = false }
