[package]
name = "qsh-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for qsh - protocol, types, terminal state"

[features]
default = ["compression"]
tunnel = ["tun"]
standalone = ["dep:ssh-key", "dep:rpassword", "dep:libc", "dep:ring", "dep:ssh-agent-client-rs"]
compression = ["dep:zstd"]

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vte = { workspace = true }
unicode-width = { workspace = true }
ipnet = { workspace = true }
tun = { workspace = true, optional = true }
quinn = { workspace = true }
rustls = { workspace = true }
sha2 = "0.10"
rand = { workspace = true }
getrandom = "0.2"

# File transfer dependencies
xxhash-rust = { version = "0.8", features = ["xxh64"] }
zstd = { version = "0.13", optional = true }

# Standalone auth dependencies (optional)
ssh-key = { workspace = true, optional = true }
rpassword = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
ring = { workspace = true, optional = true }
ssh-agent-client-rs = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
test-case = { workspace = true }
assert_matches = { workspace = true }
qsh-test-utils = { workspace = true }
tempfile = { workspace = true }
