[package]
name = "qsh-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "qsh server binary - PTY management and QUIC endpoint"

[lib]
path = "src/lib.rs"

[[bin]]
name = "qsh-server"
path = "src/main.rs"

[features]
default = ["s2n-quic-backend", "compression"]
quiche-backend = ["qsh-core/quiche-backend", "dep:tokio-quiche", "dep:quiche"]
s2n-quic-backend = ["qsh-core/s2n-quic-backend", "dep:s2n-quic"]
tunnel = ["qsh-core/tunnel"]
standalone = ["qsh-core/standalone", "dep:ssh-key"]
compression = ["qsh-core/compression"]

[dependencies]
qsh-core = { workspace = true, default-features = false }
tokio = { workspace = true }
tokio-quiche = { workspace = true, optional = true }
quiche = { workspace = true, optional = true }
s2n-quic = { workspace = true, optional = true }
rustls-pemfile = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
rcgen = { workspace = true }
rand = { workspace = true }
aws-lc-rs = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
filetime = { workspace = true }

# Standalone mode (optional)
ssh-key = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
test-case = { workspace = true }
assert_matches = { workspace = true }
qsh-test-utils = { path = "../qsh-test-utils", default-features = false }
futures = { workspace = true }
qsh-client = { path = "../qsh-client", default-features = false, features = ["standalone"] }
tempfile = { workspace = true }
